--- a/_sass/config/_variables.scss
+++ b/_sass/config/_variables.scss
@@ -8,7 +8,7 @@ $c-yellow: #fd2;
 $c-black: #151515;
 
 /* MQs */
-$xl: 1600;
+$xl: 1280;
 $l: 1024;
 $m: 768;
 $ms: 600;
