--- a/_sass/helpers/_layout.scss
+++ b/_sass/helpers/_layout.scss
@@ -28,10 +28,11 @@
 
 .inner{
 	margin: 0 auto;
-	max-width: 960px;
+	max-width: 984px; // iPad landscape width with 20px either side
+
 	
-	@include breakpoint(desktop){
-		max-width: 1020px;
+	@include breakpoint(xl){
+		max-width: $l+px;
 	}
 	
 }
